chore: fix alignments

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,10 +63,6 @@
 @layer base {
   section {
     padding: 72px 0;
-    border-bottom: 1px solid var(--color-rule);
-  }
-  section:last-of-type {
-    border-bottom: 0;
   }
 }
 
